--- a/src/main/resources/language.yml
+++ b/src/main/resources/language.yml
@@ -1,10 +1,7 @@
 LOGIN_REPEAT: "&c你已经登录了,不需要再次登录"
 LOGIN_NOREGISTER: "&c请先注册!"
 LOGIN_SUCCESS: "&a已成功登录!"
-LOGIN_FAIL: "&c密码错误!"
-LOGIN_FAIL_IF_FORGET: "&c密码错误,如果忘记密码需要重置密码请输入/resetpassword forget"
+LOGIN_FAIL: "&c密码错误,如果忘记密码需要重置密码请到猫世界皮肤站(http://auth.catserver.moe:8001/)找回!"
 LOGIN_REQUEST: "&a请输入&e/l 密码 &a来登录游戏 \n &b如果你从未注册,请换个游戏名!"
-REGISTER_REQUEST: "&a你还没有注册,请输入&e/reg 密码 重复密码 &a来注册"
+REGISTER_REQUEST: "&a你还没有注册,请猫世界皮肤站(http://auth.catserver.moe:8001/)注册并验证邮箱"
 AUTO_KICK: "&a你因{time}秒内没有登陆，已被系统踢出服务器"
-
-
